--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
+html,
+body {
+  height: 100%;
+  min-height: 100%;
+  overflow: auto;
+}
+
 body {
   margin: 0;
+  min-width: 360px;
+  align-items: center;
+  justify-content: center;
+  background: hsl(212, 45%, 89%);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,29 +21,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-#error-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.user-info {
-  margin: auto;
-  width: 65%;
-  padding: 1em;
-}
-
-.form-check {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-h1,
-#submit-button {
-  text-align: center;
 }
