--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -2,6 +2,10 @@
   margin-top: 0;
 }
 
+.info-requirements {
+  border-bottom: 0.5px solid #d7d6d6;
+}
+
 label {
   font-weight: bold;
 }
@@ -13,6 +17,8 @@ form {
   margin: 0;
   border-radius: 0.75rem;
   min-width: 620px;
+  width: min-content;
+  justify-content: center;
 }
 
 span {
@@ -38,6 +44,37 @@ h2 {
 .swal2-title {
   border-bottom: none !important;
 }
+
+.swal2-html-container {
+  display: flex !important;
+  padding-left: 3em !important;
+  text-align: start !important;
+}
+
+.errorMessage {
+  font-size: 12px;
+  color: red;
+  margin-top: 1em;
+}
+
+.mb-3 {
+  margin-bottom: 0px !important;
+}
+
+.errorContainer {
+  text-align: center;
+}
+
+.error-input {
+  border-color: red;
+}
+
+.error-input:focus {
+  border-color: red;
+
+  box-shadow: 0 0 0 0.25rem rgba(250, 6, 6, 0.25);
+}
+
 #error-page {
   display: flex;
   flex-direction: column;
@@ -49,6 +86,26 @@ h2 {
 
 @media (max-width: 650px) {
   form {
+    min-width: 400px !important;
+  }
+
+  .loan_date,
+  .loan_weeks,
+  .loan_amount,
+  .age {
+    width: 11rem;
+  }
+}
+
+@media (max-width: 435px) {
+  form {
     min-width: 300px !important;
+  }
+
+  .loan_amount,
+  .age,
+  .loan_date,
+  .loan_weeks {
+    width: 100%;
   }
 }
