--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -51,6 +51,11 @@ h2 {
   text-align: start !important;
 }
 
+.form-check-input {
+  min-width: 1em;
+  min-height: 1em;
+}
+
 .errorMessage {
   font-size: 12px;
   color: red;
