Mejora en la estructuración del formulario. Mejora en la estructuración del CSS. Mejora en la validación de inputs.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  --grey: #d7d6d6;
+  --red: red;
+  --required-red: rgb(211, 2, 2);
+  --darker-red: rgba(250, 6, 6, 0.25);
+}
+
 html,
 body {
   height: 100%;
